# connect4

./: .gitignore  LICENSE  README.md  mcts_playground.ipynb  poc_batch_nn  poc_batch_nn.py  pyproject.toml
scripts/: demo_mcts.py  demo_play_game.py
src/connect4/: board.py  data_collector.py  mcts.py
tests/: conftest.py
tests/board/: test_add_move.py  test_check_board_state.py  test_check_valid_state.py  test_check_win.py  test_get_legal_moves.py
tests/mcts/: test_rollout_integration.py  test_select_leaf_.py
