[project]
name = "connect4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "ray[default]>=2.48.0",
    "ruff>=0.12.5",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
